[gd_scene load_steps=11 format=3 uid="uid://jdqm7clpymgb"]

[ext_resource type="Texture2D" uid="uid://dnobb6aixv4nt" path="res://UI/Energy_Watch/Assets/HUD_Main.png" id="1_j1e4c"]
[ext_resource type="Script" uid="uid://dfilwnm5ssigc" path="res://UI/Energy_Watch/Scripts/watch_ui.gd" id="2_8g6kl"]
[ext_resource type="Script" uid="uid://caw7tucab60rt" path="res://UI/Energy_Watch/Scripts/speed_watch.gd" id="3_5xpgs"]
[ext_resource type="Texture2D" uid="uid://b7wp30nxoeq5y" path="res://UI/Energy_Watch/Assets/Speedometer_Pin.png" id="3_fbc7j"]
[ext_resource type="Texture2D" uid="uid://behqslpo3awhn" path="res://UI/Energy_Watch/Assets/Health_Energy_Topper.png" id="5_cuqf4"]
[ext_resource type="Texture2D" uid="uid://cssuf1gfb43ba" path="res://UI/Energy_Watch/Assets/Health_Empty.png" id="6_cg0oq"]
[ext_resource type="Texture2D" uid="uid://b7xa13x4x8fal" path="res://UI/Energy_Watch/Assets/Health_Full.png" id="7_8g6kl"]
[ext_resource type="Texture2D" uid="uid://cq77o0r4kwo3" path="res://UI/Energy_Watch/Assets/Energy_Empty.png" id="8_fbc7j"]
[ext_resource type="Texture2D" uid="uid://d4jllw0vlgckt" path="res://UI/Energy_Watch/Assets/Energy_Full.png" id="9_cuqf4"]
[ext_resource type="Texture2D" uid="uid://cfw5q78la0owr" path="res://UI/Energy_Watch/Assets/Energy_Gauge_Flat.png" id="10_cg0oq"]

[node name="SpeedWatch" type="Node2D"]

[node name="WatchFace" type="Sprite2D" parent="."]
position = Vector2(847, 517)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_j1e4c")
script = ExtResource("2_8g6kl")

[node name="SpeedPin" type="Sprite2D" parent="WatchFace"]
position = Vector2(2.5, 107.5)
rotation = -2.11185
texture = ExtResource("3_fbc7j")
centered = false
offset = Vector2(-40, -220)
script = ExtResource("3_5xpgs")
display_speed = 0.02

[node name="LeftCap" type="Sprite2D" parent="WatchFace"]
position = Vector2(-368.75, 263.75)
texture = ExtResource("5_cuqf4")
centered = false
offset = Vector2(-203, -181)
metadata/_edit_lock_ = true

[node name="RightCap" type="Sprite2D" parent="WatchFace"]
position = Vector2(377.5, 263.75)
rotation = 3.14159
texture = ExtResource("5_cuqf4")
centered = false
offset = Vector2(-200, -180)

[node name="HealthEmpty" type="Sprite2D" parent="WatchFace"]
texture_repeat = 2
position = Vector2(-368.75, 263.75)
rotation = 3.14159
texture = ExtResource("6_cg0oq")
centered = false
offset = Vector2(0, -180)
region_enabled = true
region_rect = Rect2(-200, 0, 0, 360)
metadata/_edit_lock_ = true

[node name="HealthFull" type="Sprite2D" parent="WatchFace/HealthEmpty"]
texture_repeat = 2
texture = ExtResource("7_8g6kl")
centered = false
offset = Vector2(0, -180)
region_enabled = true
region_rect = Rect2(0, 0, 0, 360)

[node name="EnergyEmpty" type="Sprite2D" parent="WatchFace"]
texture_repeat = 2
position = Vector2(375, 263.75)
texture = ExtResource("8_fbc7j")
centered = false
offset = Vector2(0, -180)
region_enabled = true
region_rect = Rect2(0, 0, 0, 360)
metadata/_edit_lock_ = true

[node name="EnergyFull" type="Sprite2D" parent="WatchFace/EnergyEmpty"]
texture_repeat = 2
texture = ExtResource("9_cuqf4")
centered = false
offset = Vector2(0, -180)
region_enabled = true
region_rect = Rect2(0, 0, 0, 360)

[node name="EnergyGauge" type="Control" parent="WatchFace"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="ProgressBar" type="TextureProgressBar" parent="WatchFace/EnergyGauge"]
layout_mode = 0
offset_left = -272.5
offset_top = -158.75
offset_right = 477.5
offset_bottom = 778.25
max_value = 91.0
value = 91.0
fill_mode = 4
radial_initial_angle = 197.0
texture_progress = ExtResource("10_cg0oq")
metadata/_edit_lock_ = true
